--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   
-  <body style="background-image: url('images/white-wood.jpg');">
+  <body>
     
     <h1>My Hog Bank</h1>
     
